@startuml

package "org.bitbucket.eniqen.models" {

    abstract class BaseEntity <Serializable> {
        -id: String
        -version: int
        -status: Status
    }

    abstract class BaseNamedEntity {
        -name: String
        -description: String
    }

    class Template {
    -templateFields: List<TemplatesFields>
    }

    class Document {
        -template_id: Template
        -documentFields: List<DocumentsFields>
    }

    class Field {
       -type: FieldType
       -templateFields: List<TemplatesFields>
    }

    class TemplatesFields {
        -id: String
        -template_id: Template
        -field_id: Field
        -ordinal: int

    }

    class DocumentsFields {
        -document_id: Document
        -template_field_id: TemplatesFields
        -value String
    }

    enum FieldType {
        CHECKBOX
        TEXTAREA
        INPUT
    }

    enum Status {
        ACTIVE
        DELETED
    }

    BaseEntity <|-- BaseNamedEntity
    BaseEntity "1" *--> "*" Status : use

    BaseNamedEntity <|-- Field
    BaseNamedEntity <|-- Template
    BaseNamedEntity <|-- Document

    TemplatesFields "*" <--* "1" Template
    TemplatesFields "*" *--> "1" Field

    DocumentsFields "*" *--> "1" TemplatesFields
    DocumentsFields "*" *--o "1" Document

    Template "1" <--* "*" Document
    Field "1" *--> "*" FieldType : use
}

@enduml